--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,4 +94,4 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: us-central1-docker.pkg.dev/cc-assns/cicd-fierensk/fastapi-server:v2
+          tags: us-central1-docker.pkg.dev/cc-assns/cicd-fierensk/
